<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2020 Daniel Gultsch
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_archive"
        android:icon="@drawable/ic_archive_24dp"
        android:title="@string/archive"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_remove_label"
        android:icon="@drawable/ic_label_off_24dp"
        android:title="@string/remove_label"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_move_to_trash"
        android:icon="@drawable/ic_delete_24dp"
        android:title="@string/delete"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_mark_unread"
        android:icon="@drawable/ic_mark_unread_24dp"
        android:title="@string/mark_unread"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_mark_read"
        android:icon="@drawable/ic_mark_read_24dp"
        android:title="@string/mark_read"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_change_labels"
        android:title="@string/change_labels"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_move_to_inbox"
        android:title="@string/move_to_inbox"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_add_flag"
        android:title="@string/add_flag"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_remove_flag"
        android:title="@string/remove_flag"
        app:showAsAction="never" />


    <item
        android:id="@+id/action_mark_important"
        android:title="@string/mark_important"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_mark_not_important"
        android:title="@string/mark_not_important"
        app:showAsAction="never" />

</menu>