<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2019 Daniel Gultsch
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:ignore="AlwaysShowAction">
    <item
        android:id="@+id/action_encryption_options"
        android:title="@string/encryption_options"
        android:icon="@drawable/ic_lock_24dp"
        app:showAsAction="always">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/encryption_option_clear_text"
                    android:title="@string/cleartext"
                    android:checked="true"/>
                <item
                    android:id="@+id/encryption_option_encrypted"
                    android:title="@string/encrypted"
                    android:checked="false"/>
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/action_attach_file"
        android:icon="@drawable/ic_attachment_24dp"
        android:title="@string/attach_file"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_send"
        android:icon="@drawable/ic_send_24dp"
        android:title="@string/send"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_schedule_send"
        android:title="@string/schedule_send" />

    <item
        android:id="@+id/action_discard"
        android:title="@string/discard"
        app:showAsAction="never" />

</menu>