<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2019 Daniel Gultsch
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ProgressBar
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:visibility="@{setupViewModel.isLoading() ? View.VISIBLE : View.INVISIBLE}" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:minHeight="336dp"
                android:orientation="vertical"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                android:paddingBottom="16dp">

                <LinearLayout
                    android:id="@+id/instruction_wrapper"
                    android:layout_width="match_parent"
                    android:layout_height="32sp"
                    android:layout_below="@+id/header"
                    android:layout_marginTop="8sp"
                    android:layout_marginBottom="24sp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/TextAppearance.AppCompat.Subhead"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sign_in_instruction" />
                </LinearLayout>

                <TextView
                    android:id="@+id/header"
                    style="@style/TextAppearance.AppCompat.Headline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/app_name"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="24sp"
                    android:text="@string/sign_in" />

                <TextView
                    android:id="@+id/app_name"
                    style="@style/AppNameTheme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="32sp"
                    android:text="@string/app_name" />

                <LinearLayout
                    android:id="@+id/oauth_buttons"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/email_address_input_layout"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="72dp"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextAppearance.Material3.BodyMedium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="8dp"
                        android:text="@string/or_sign_in_with"
                        android:visibility="@{setupViewModel.googleAvailable || setupViewModel.microsoftAvailable ? View.VISIBLE : View.GONE}" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/sign_in_google"
                        style="@style/Widget.Material3.Button.OutlinedButton.Icon"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="@{!setupViewModel.isLoading()}"
                        android:text="@string/sign_in_with_google"
                        android:visibility="@{setupViewModel.googleAvailable ? View.VISIBLE : View.GONE}"
                        app:icon="@drawable/ic_google_24dp"
                        app:iconTint="@null" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/sign_in_microsoft"
                        style="@style/Widget.Material3.Button.OutlinedButton.Icon"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="@{!setupViewModel.isLoading()}"
                        android:text="@string/sign_in_with_microsoft"
                        android:visibility="@{setupViewModel.microsoftAvailable ? View.VISIBLE : View.GONE}"
                        app:icon="@drawable/ic_microsoft_24dp"
                        app:iconTint="@null" />
                </LinearLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/next"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:enabled="@{!setupViewModel.isLoading()}"
                    android:text="@string/next" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/email_address_input_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/instruction_wrapper"
                    android:layout_gravity="center_horizontal"
                    android:enabled="@{!setupViewModel.isLoading()}"
                    android:hint="@string/email_address"
                    app:errorText="@{setupViewModel.emailAddressError}">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="flagNoExtractUi|actionNext"
                        android:inputType="textEmailAddress|textNoSuggestions"
                        android:maxLines="1"
                        android:text="@={setupViewModel.emailAddress}" />
                </com.google.android.material.textfield.TextInputLayout>

            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

    <data>

        <import type="android.view.View" />

        <variable
            name="setupViewModel"
            type="rs.ltt.android.ui.model.SetupViewModel" />
    </data>
</layout>